src/objects/peer__FB_Permissions__c.object
<CustomObject>
    <fields>
        <fullName>peer__Borrower_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the permission is required for Borrower</description>
        <label>Borrower Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__FB_Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the permission is optional in FB</description>
        <label>FB Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Lender_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the permission is required for Lender</description>
        <label>Lender Required</label>
        <type>Checkbox</type>
    </fields>
    <label>FB Permissions</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FB Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>